# scoobydoo

./: Cargo.toml  README.md  package-lock.json
Contract/scr/: lib.rs
Contract/src/: lib.rs  test.rs
Vite/: .env  index.html  package-lock.json  package.json
Vite/src/: App.tsx  index.css  main.tsx  tsconfig.json  tsconfig.node.json  vite-env.d.ts
Vite/src/components/: AccountDropdown.tsx  BorrowModal.tsx  CreatePoolModal.tsx  DepositModal.tsx  LoanCard.tsx  MetricCard.tsx  NetworkBadge.tsx  PoolCard.tsx  Portal.tsx  ProgressBar.tsx  WalletButton.tsx
Vite/src/context/: ToastContext.tsx  WalletContext.tsx
Vite/src/lib/: constants.ts  contract.ts  freighter.ts  poolMeta.ts
Vite/src/pages/: MyDeposits.tsx  MyLoans.tsx  Pools.tsx
